crates/courier-ftp/src/ui/vault/snapshots/courier_ftp__ui__vault__tests__vault_first_run_80x24.snap
---
source: crates/courier-ftp/src/ui/vault/tests.rs
assertion_line: 156
expression: "render(&v, 80, 24, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
" ┌ Create your vault ─────────────────────────────────────────────────────────┐ "
" │ courier-ftp keeps your sites, passwords, history and trusted keys          │ "
" │ encrypted on this device. The master password is the only key; with sync   │ "
" │ it is also the account password.                                           │ "
" │                                                                            │ "
" │ Master password:                                                           │ "
" │ Confirm:                                                                   │ "
" │ Strength:         ░░░░ —                                                   │ "
" │                   At least “strong” is required.                           │ "
" │ [ ] Unlock with system keyring on this device                              │ "
" │     The keyring is also the only local recovery path.                      │ "
" │ ⚠ Without the keyring option or a sync account (which gives you a recovery │ "
" │ key), a forgotten password means your saved sites are lost.                │ "
" │                                                                            │ "
" │               [ Set password ]  [ Continue without vault ]                 │ "
" │ Restore from a .cftp-backup (T73) or sign in to a sync server (T90): not   │ "
" │ available yet.                                                             │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
"                                                                                "
"                                                                                "
