crates/courier-ftp/src/ui/vault/snapshots/courier_ftp__ui__vault__tests__vault_forgot_keyring_80x24.snap
---
source: crates/courier-ftp/src/ui/vault/tests.rs
assertion_line: 231
expression: text
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ┌ Forgot password? ──────────────────────────────────────────────────────────┐ "
" │                                                                            │ "
" │ Keyring unlock is on for this device: the system keyring can open the      │ "
" │ vault, then you choose a new master password.                              │ "
" │                                                                            │ "
" │ › Unlock with the system keyring and set a new password                    │ "
" │   Back                                                                     │ "
" │                                                                            │ "
" │ ↑/↓ choose · Enter select · Esc back                                       │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
