crates/courier-ftp/src/ui/vault/snapshots/courier_ftp__ui__vault__tests__vault_unlock_160x48.snap
---
source: crates/courier-ftp/src/ui/vault/tests.rs
assertion_line: 53
expression: "render(&v, 160, 48, now)"
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                         ┌ Unlock vault ──────────────────────────────────────────────────────────────┐                                         "
"                                         │                                                                            │                                         "
"                                         │                                 courier-ftp                                │                                         "
"                                         │                                                                            │                                         "
"                                         │ Master password:  •••••••                                                  │                                         "
"                                         │                                                                            │                                         "
"                                         │       [ Unlock ]  [ Continue without vault ]  [ Forgot password? ]         │                                         "
"                                         │                                                                            │                                         "
"                                         │                                                                            │                                         "
"                                         └────────────────────────────────────────────────────────────────────────────┘                                         "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
