crates/courier-ftp/src/ui/vault/snapshots/courier_ftp__ui__vault__tests__vault_unlock_80x24.snap
---
source: crates/courier-ftp/src/ui/vault/tests.rs
assertion_line: 52
expression: text
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ┌ Unlock vault ──────────────────────────────────────────────────────────────┐ "
" │                                                                            │ "
" │                                 courier-ftp                                │ "
" │                                                                            │ "
" │ Master password:  •••••••                                                  │ "
" │                                                                            │ "
" │       [ Unlock ]  [ Continue without vault ]  [ Forgot password? ]         │ "
" │                                                                            │ "
" │                                                                            │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
